<resources>
    <string name="app_name">iqtest</string>
    <string name="action_settings">Settings</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="multi_player">MULTI PLAYER CONTEST</string>
    <string name="quit">QUIT</string>
    <!-- Edit text form_create_group-->
    <string name="create_group">Create Group Players</string>
    <string name="add_more">ADD MORE</string>
    <string name="save">SAVE</string>
    <string name="group_name">Group name</string>

    <string name="fullname">Full name</string>
    <!-- group_search-->
    <string name="search">Search</string>
    <!-- activity_play-->
    <string name="exit">EXIT</string>
    <string name="finish">FINISH</string>
    <string name="download">DOWNLOAD</string>
    <string name="user_guide">User Guide</string>
    <string name="company_name">Company name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Save</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="add_user_menu_item">Add User</string>
    <string name="view_result_menu_item">View Result</string>
    <string name="view_question_menu_item">View question/answer</string>
    <string name="import_data_menu_item">Import Data</string>
    <string name="url_import_data">URL Import Data (File.zip)</string>
    <string name="choose_answer">Choose Answer</string>
    <string name="view_answer">View Answer</string>
    <string name="example_company_name">BSP SOFTWARE SERVICES CORP</string>
    <string name="example_user_name">My Linh</string>
    <string name="example_phone_number">0168216</string>
    <string name="example_number_of_sentence">20/30</string>
    <string name="example_number_of_correct">17</string>
    <string name="title_activity_import_data">ImportDataActivity</string>
    <string name="example_hint_path_text">http://iqdata.comxa.com/data.zip</string>
    <string name="title_activity_user_guide">UserGuideActivity</string>

    <string name="user_guide_text">
        <b>Data Zip File Format</b>\n
        Zip File contains two parts: data.json and image folder.
        Image Folder contains question images and answer images.
        Need to put these parts into folder has name :"data" and zip this folder.
        \n\n<b>Json Format Guide</b>\n
         {\n\t\t"num_questions": number of question,
            \n\t\t"questions":[
                            \n\t\t\t\t{
                                \n\t\t\t\t"question_data": image name of question file,
                                \n\t\t\t\t"num_answers_per_question":number of answers of this question,
                                \n\t\t\t\t"answers": image name of answer file,
                                \n\t\t\t\t"right_choice":right answer for this question
                            \n\t\t\t\t}
                        \n\t\t]
        \n}
    </string>


    <string name="title_activity_question">QuestionActivity</string>

</resources>
