<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/table_row"
          android:paddingTop="@dimen/space_8"
          android:paddingBottom="@dimen/space_16"
          android:weightSum="6"
          android:paddingLeft="@dimen/space_16"
          android:paddingRight="@dimen/space_16">

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_weight="4.5"
        android:layout_height="wrap_content"
        android:background="@drawable/round_table_cell"
        android:paddingTop="@dimen/space_16"
        android:paddingBottom="@dimen/space_16"
        android:layout_width="0dp">
        <TextView
            android:textColor="@color/color_name_user"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/text_view_user_name"
            android:gravity="center_horizontal"
            android:text="@string/example_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_phone"
            android:textStyle="bold"
            android:textColor="@color/color_phone_number"
            android:layout_below="@+id/text_view_user_name"
            android:text="@string/example_phone_number"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/user_score"
        android:background="@drawable/round_table_cell_2"
        android:layout_marginLeft="8sp"
        android:layout_marginStart="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:paddingTop="@dimen/space_16"
        android:paddingBottom="@dimen/space_16">
        <TextView
            android:textSize="18sp"
            android:id="@+id/text_view_number_correct"
            android:gravity="center_horizontal"
            android:textColor="@color/color_number_of_correct"
            android:text="@string/example_number_of_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_number_completed_sentence"
            android:textColor="@color/color_number_of_sentence"
            android:layout_below="@+id/text_view_number_correct"
            android:text="@string/example_number_of_sentence"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</TableRow>