<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anh.iqtest.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/login_screen"
    android:background="@drawable/bg_wood_blue"
    android:weightSum="2">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.8"
        android:background="@drawable/bg_wood"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="@dimen/space_25">

            <TextView

                android:text="@string/example_company_name"
                android:textColor="@color/color_black"
                android:id="@+id/text_view_company"
                android:textSize="@dimen/header_text_size"
                android:textAlignment="center"
                android:padding="@dimen/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:singleLine="true"
                android:id="@+id/login_username_text"
                android:hint="@string/username"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/round_corner_text_box"
                android:padding="@dimen/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:singleLine="true"
                android:inputType="textPassword"
                android:id="@+id/login_password_text"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/round_corner_text_box"
                android:padding="@dimen/space_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="@dimen/space_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_login"
                    android:text="@string/login" android:layout_centerInParent="true"
                    android:textColor="@color/color_white"
                    android:background="@drawable/round_corner_button_red"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

    </RelativeLayout>


</LinearLayout>
