<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_wood_blue"
    tools:context="com.bsp.iqtest.iqtest.ManageActivity"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.8"
        android:background="@drawable/bg_wood_2line"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"
                android:padding="0dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:paddingLeft="@dimen/space_40"
            android:paddingRight="@dimen/space_40">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/navigate_add_user"
                    android:text="@string/add_user_menu_item" android:layout_centerInParent="true"
                    android:textColor="@color/color_white"
                    android:background="@drawable/round_corner_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_text_size"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/space_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button

                    android:textSize="@dimen/default_text_size"
                    android:id="@+id/navigate_view_result"
                    android:text="@string/view_result_menu_item" android:layout_centerInParent="true"
                    android:textColor="@color/color_white"
                    android:background="@drawable/round_corner_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/space_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:textSize="@dimen/default_text_size"
                    android:id="@+id/navigate_view_question"
                    android:text="@string/view_question_menu_item" android:layout_centerInParent="true"
                    android:textColor="@color/color_white"
                    android:background="@drawable/round_corner_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/space_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:textSize="@dimen/default_text_size"
                    android:id="@+id/navigate_import_data"
                    android:text="@string/import_data_menu_item" android:layout_centerInParent="true"
                    android:textColor="@color/color_white"
                    android:background="@drawable/round_corner_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="@dimen/space_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:background="@null"
                    android:src="@drawable/ic_set_time"
                    android:id="@+id/btn_show_picker"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

    </RelativeLayout>
</LinearLayout>
